Update text and add button

--- a/index.html
+++ b/index.html
@@ -7,14 +7,26 @@
   <title>SheCodes Week Two</title>
 </head>
 <body>
-  <h1>
-    She Codes is a Coding Workshop for Women
-  </h1>
-  <h2>
-    Access a new career in Technology
-  </h2>
-  <p>
-    She Codes teaches coding, design, and management skills to women
-  </p>
+  <section>
+    <h1>
+      She Codes is a Coding Workshop for Women
+    </h1>
+    <h2>
+      Access a new career in Technology
+    </h2>
+    <p>
+      She Codes teaches coding, design, and management skills to women
+      <br />
+          <strong>
+            Limited amount of spots!
+          </strong>
+    </p>
+    <br />
+    <button>
+      Apply Now
+    </button
+  </section>
+  
+
 </body>
 </html>
