--- a/index.html
+++ b/index.html
@@ -53,27 +53,31 @@
     }
   </style>
 </head>
+
 <body>
   <section>
     <h1>
-      She Codes is a Coding Workshop for Women
+      👩‍💻 She Codes is a Coding Workshop for Women
     </h1>
     <h2>
       Access a new career in Technology
     </h2>
     <p>
-      She Codes teaches coding, design, and management skills to women
+      She Codes teaches coding, design and management skills to women
       <br />
-          <strong>
-            Limited amount of spots!
-          </strong>
+      <strong>
+        Limited amount of spots!
+      </strong>
     </p>
     <br />
     <button>
       Apply Now
-    </button
+    </button>
   </section>
-  
+  <script>
+    let hometown = prompt("What is your hometown?");
+    alert(hometown);
+  </script>
 
 </body>
 </html>
