Update hometown alert and add first and last name prompts

--- a/index.html
+++ b/index.html
@@ -76,7 +76,10 @@
   </section>
   <script>
     let hometown = prompt("What is your hometown?");
-    alert(hometown);
+    alert("Your hometown is " + hometown);
+
+    let firstName = prompt("What is your first name?")
+    let lastName = prompt("What is you last name?")
   </script>
 
 </body>
