--- a/index.html
+++ b/index.html
@@ -78,8 +78,10 @@
     let hometown = prompt("What is your hometown?");
     alert("Your hometown is " + hometown);
 
-    let firstName = prompt("What is your first name?")
-    let lastName = prompt("What is you last name?")
+    let firstName = prompt("What is your first name?");
+    let lastName = prompt("What is you last name?");
+    let fullName = firstName + lastName;
+    alert("Your name is" + fullName);
   </script>
 
 </body>
