Add spacing for full name alert. challenge is complete

--- a/index.html
+++ b/index.html
@@ -80,8 +80,8 @@
 
     let firstName = prompt("What is your first name?");
     let lastName = prompt("What is you last name?");
-    let fullName = firstName + lastName;
-    alert("Your name is" + fullName);
+    let fullName = firstName + " " + lastName;
+    alert("Your name is " + fullName);
   </script>
 
 </body>
