Add age prompt and comment out previous prompts and alerts from lesson 4 challenge

--- a/index.html
+++ b/index.html
@@ -75,13 +75,16 @@
     </button>
   </section>
   <script>
-    let hometown = prompt("What is your hometown?");
-    alert("Your hometown is " + hometown);
+    // let hometown = prompt("What is your hometown?");
+    // alert("Your hometown is " + hometown);
 
-    let firstName = prompt("What is your first name?");
-    let lastName = prompt("What is you last name?");
-    let fullName = firstName + " " + lastName;
-    alert("Your name is " + fullName);
+    // let firstName = prompt("What is your first name?");
+    // let lastName = prompt("What is you last name?");
+    // let fullName = firstName + " " + lastName;
+    // alert("Your name is " + fullName);
+
+    let age = prompt("How old are you?")
+    
   </script>
 
 </body>
