--- a/index.html
+++ b/index.html
@@ -84,6 +84,10 @@
     // alert("Your name is " + fullName);
 
     let age = prompt("How old are you?")
+
+    if (age >= 18) {
+      alert("You can apply!")
+    }
     
   </script>
 
