Added you cannot apply alert for ages less than 18. challenge completed

--- a/index.html
+++ b/index.html
@@ -88,7 +88,11 @@
     if (age >= 18) {
       alert("You can apply!")
     }
-    
+
+    if (age < 18) {
+      alert("You cannot apply 😢")
+    }
+
   </script>
 
 </body>
