Update code for lesson 6 and add alternate solution from SheCodes

--- a/index.html
+++ b/index.html
@@ -75,42 +75,48 @@
     </button>
   </section>
   <script>
-    // ***LESSON 4 CHALLENGE*** 
+    // *** LESSON 4 CHALLENGE *** 
     // let hometown = prompt("What is your hometown?");
     // alert("Your hometown is " + hometown);
-
     // let firstName = prompt("What is your first name?");
     // let lastName = prompt("What is you last name?");
     // let fullName = firstName + " " + lastName;
     // alert("Your name is " + fullName);
 
-
     //***LESSON 5 CHALLENGE
     // let age = prompt("How old are you?");
-
     // if (age >= 18) {
     //   alert("You can apply!");
     // }
-
     // if (age < 18) {
     //   alert("You cannot apply 😢");
     // }
 
-    //***LESSON 6 CHALLENGE
-
+    //*** LESSON 6 CHALLENGE ***
     let hour = prompt("What is the hour? (24 Hour Time)");
-
     if (hour < 12) {
       alert("Good Morning! ☀️");
     } else {
       if (hour >= 12 && hour <= 18) {
         alert("Good Afternoon!");
-    } else {
-      if (hour > 18) {
-      alert("Good Evening!");
-    }
-  }
-}
+      } else { 
+        alert("Good Evening!");
+        }
+      }
+    
+
+//*** LESSON 6 CHALLENGE ALTERNATE SOLUTION FROM SHE CODES ***
+// let currentHour = prompt("What is the current hour?");
+// if (currentHour < 12) {
+//   alert("Good morning");
+// } else {
+//   if (currentHour > 18) {
+//     alert("Good evening");
+//   } else {
+//     alert("Good afternoon");
+//   }
+// }
+
   </script>
 
 </body>
