Add country prompt and alert that responds with you speak portuguese if input is Brazil or Portugal

--- a/index.html
+++ b/index.html
@@ -93,17 +93,16 @@
     // }
 
     //*** LESSON 6 CHALLENGE ***
-    let hour = prompt("What is the hour? (24 Hour Time)");
-    if (hour < 12) {
-      alert("Good Morning! ☀️");
-    } else {
-      if (hour >= 12 && hour <= 18) {
-        alert("Good Afternoon!");
-      } else { 
-        alert("Good Evening!");
-        }
-      }
-    
+    // let hour = prompt("What is the hour? (24 Hour Time)");
+    // if (hour < 12) {
+    //   alert("Good Morning! ☀️");
+    // } else {
+    //   if (hour >= 12 && hour <= 18) {
+    //     alert("Good Afternoon!");
+    //   } else { 
+    //     alert("Good Evening!");
+    //     }
+    //   }
 
 //*** LESSON 6 CHALLENGE ALTERNATE SOLUTION FROM SHE CODES ***
 // let currentHour = prompt("What is the current hour?");
@@ -117,6 +116,11 @@
 //   }
 // }
 
+// *** LESSON 7 CHALLENGE ***
+let country = prompt("What country are you from?");
+if (country === "Brazil" || country === "Portugal") {
+  alert("You speak portuguese");
+} 
   </script>
 
 </body>
