--- a/index.html
+++ b/index.html
@@ -120,7 +120,9 @@
 let country = prompt("What country are you from?");
 if (country === "Brazil" || country === "Portugal") {
   alert("You speak portuguese");
-} 
+} else {
+  alert("You don't speak portuguese")
+}
   </script>
 
 </body>
