Comment out lesson 8 challenge and prep for lesson 10 challenge

--- a/index.html
+++ b/index.html
@@ -130,16 +130,18 @@
 
 // *** LESSON 8 CHALLENGE *** 
 
-  function canSpeakPortuguese() {
-    let country = prompt("What country are you from?");
-    if (country === "Brazil" || country === "Portugal") {
-      alert("You speak portuguese!");
-    } else {
-      alert("Go learn portuguese!");
-    }
-  }
+  // function canSpeakPortuguese() {
+  //   let country = prompt("What country are you from?");
+  //   if (country === "Brazil" || country === "Portugal") {
+  //     alert("You speak portuguese!");
+  //   } else {
+  //     alert("Go learn portuguese!");
+  //   }
+  // }
 
-  canSpeakPortuguese();
+  // canSpeakPortuguese();
+
+  // *** LESSON 10 CHALLENGE ***
 
   </script>
 
