--- a/index.html
+++ b/index.html
@@ -73,6 +73,7 @@
     <button>
       Apply Now
     </button>
+
   </section>
   <script>
     // *** LESSON 4 CHALLENGE *** 
@@ -142,6 +143,24 @@
   // canSpeakPortuguese();
 
   // *** LESSON 10 CHALLENGE ***
+  function applicantInfo () {
+    
+    let name = prompt("What is your name?");
+    let age = prompt("How old are you?");
+    if (age >= 18) {
+      let h1 = document.querySelector("h1");
+      h1.innerHTML = "Hi," + name + "!" + " Welcome to SheCodes!";
+    } else {
+      let h1 = document.querySelector("h1");
+      h1.innerHTML = "Sorry" + name + " You cannot join SheCodes 😢";
+    }
+    
+  }
+
+  let applyButton = document.querySelector("button");
+
+  applyButton.addEventListener("click", applicantInfo);
+
 
   </script>
 
