Fix spacing and add emojis

--- a/index.html
+++ b/index.html
@@ -149,12 +149,11 @@
     let age = prompt("How old are you?");
     if (age >= 18) {
       let h1 = document.querySelector("h1");
-      h1.innerHTML = "Hi," + name + "!" + " Welcome to SheCodes!";
+      h1.innerHTML = "Hi, " + name + "!" + " Welcome to SheCodes!";
     } else {
       let h1 = document.querySelector("h1");
-      h1.innerHTML = "Sorry" + name + " You cannot join SheCodes 😢";
+      h1.innerHTML = "Sorry " + name + " 😢 " + " You cannot join SheCodes 👩‍💻";
     }
-    
   }
 
   let applyButton = document.querySelector("button");
